<resources>
    <string name="app_name">Football Quiz</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email address</string>
    <string name="start_quiz">Start quiz</string>
    <string name="name">First name</string>
    <string name="last_name">Last name</string>
    <string name="logo">logo</string>
    <string name="question_number">Question number</string>
    <string name="next_question">Next question</string>
    <string name="question_subject">Question subject</string>
    <string name="question_text">Question text</string>
    <string name="finish">Finish</string>
    <string name="score">Your total score:</string>
    <string name="max_score">Congratulations! You will be informed for prize award via email. </string>


</resources>
